--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,4 +37,18 @@
             <enum name="check" value="3" />
         </attr>
     </declare-styleable>
+
+    <style name="login_edittext_style">
+        <item name="android:textColorHint">#999999</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginBottom">25px</item>
+        <item name="android:layout_marginLeft">30px</item>
+        <item name="android:layout_marginRight">30px</item>
+        <item name="android:layout_marginTop">25px</item>
+        <item name="android:background">@null</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:textColor">#666666</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+    </style>
 </resources>
