--- a/app/src/main/res/layout/fragment_layout_commincation.xml
+++ b/app/src/main/res/layout/fragment_layout_commincation.xml
@@ -3,11 +3,18 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="33333"/>
-
+        >
+        <ListView
+            android:id="@+id/listview_communitcation"
+            android:layout_width="match_parent"
+            android:dividerHeight="3dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:divider="#00000000"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
