--- a/app/src/main/res/layout/item_communication.xml
+++ b/app/src/main/res/layout/item_communication.xml
@@ -1,82 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardElevation="5dp"
-     app:cardPreventCornerOverlap="true"
-    app:cardMaxElevation="10dp"
-    android:layout_margin="5dp"
     app:cardCornerRadius="0dp">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="5dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_marginBottom="3dp"
-        android:orientation="horizontal">
-        <com.study.online.view.RoundImageView
-            android:id="@+id/userimg"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/icon"/>
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="李刚是我孙子"
-            android:layout_marginLeft="15dp"/>
-        <TextView
-            android:id="@+id/article_time"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:paddingRight="10dp"
-            android:text="2015-12-12 12:23"/>
-    </LinearLayout>
+            android:layout_marginBottom="3dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <com.study.online.view.RoundImageView
+                android:id="@+id/userimg"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/icon" />
+
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="李刚是我孙子" />
+
+            <TextView
+                android:id="@+id/article_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:paddingRight="10dp"
+                android:text="2015-12-12 12:23" />
+        </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:background="@color/blue_normal"/>
-    <TextView
-        android:id="@+id/article_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:textSize="18sp"
-       android:layout_marginLeft="20dp"
-        android:text="这里怎么有一只小鸟啊"/>
+            android:visibility="gone"
+            android:background="@color/blue_normal" />
+
+        <TextView
+            android:id="@+id/article_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:text="这里怎么有一只小鸟啊"
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/article_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:minHeight="100dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginLeft="20dp"
-            android:text="我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:text="我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:background="@color/blue_normal"/>
-
-        <TextView
-            android:id="@+id/article_commit"
+            android:visibility="gone"
+            android:background="@color/blue_normal" />
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:textSize="16sp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:paddingRight="10dp"
-            android:text="评论数：23"/>
+            android:gravity="center_vertical">
+            <TextView
+                android:id="@+id/article_commit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:gravity="right|center_vertical"
+                android:layout_centerVertical="true"
+                android:paddingRight="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="10dp"
+                android:text="评论数：23"
+                android:textSize="16sp" />
+        </RelativeLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
