--- a/app/src/main/res/layout/fragment_layout_course.xml
+++ b/app/src/main/res/layout/fragment_layout_course.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
+    <!--   <TextView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:gravity="center"
+           android:text="Course" />-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/course_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Course"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
