--- a/app/src/main/res/layout/item_communication.xml
+++ b/app/src/main/res/layout/item_communication.xml
@@ -4,9 +4,9 @@
     android:id="@+id/cardview"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardCornerRadius="0dp">
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -42,13 +42,14 @@
                 android:gravity="right"
                 android:paddingRight="10dp"
                 android:text="2015-12-12 12:23" />
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:visibility="gone"
-            android:background="@color/blue_normal" />
+            android:background="@color/transparent_20"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/article_title"
@@ -57,41 +58,47 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:text="这里怎么有一只小鸟啊"
+            android:textColor="@color/transparent_80"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/article_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="100dp"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:text="我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟" />
+            android:layout_marginTop="10dp"
+            android:minHeight="100dp"
+            android:text="  我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟我是一只小小鸟"
+            android:textColor="@color/transparent_60" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:visibility="gone"
-            android:background="@color/blue_normal" />
+            android:background="@color/transparent_20"
+            android:visibility="visible" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:gravity="center_vertical">
+
             <TextView
                 android:id="@+id/article_commit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:gravity="right|center_vertical"
-                android:layout_centerVertical="true"
-                android:paddingRight="10dp"
                 android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp"
+                android:gravity="right|center_vertical"
+                android:paddingRight="10dp"
                 android:text="评论数：23"
                 android:textSize="16sp" />
+
         </RelativeLayout>
 
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
