--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -1,7 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#f2f5f7"
     android:orientation="vertical">
 
@@ -16,18 +17,15 @@
         android:background="@color/white"
         android:orientation="vertical">
 
-
         <EditText
-            android:id="@+id/editEmail"
+            android:id="@+id/register_nickname"
             style="@style/login_edittext_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:drawableLeft="@drawable/login_account"
+            android:drawableLeft="@drawable/nickname"
             android:drawablePadding="5dp"
-            android:hint="账号"
-            android:inputType="textEmailAddress"
-            android:text="15136102501" />
+            android:hint="昵称" />
 
         <View
             android:layout_width="match_parent"
@@ -35,34 +33,49 @@
             android:background="@color/transparent_50" />
 
         <EditText
-            android:id="@+id/editPassword"
+            android:id="@+id/register_account"
+            style="@style/login_edittext_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:drawableLeft="@drawable/login_account"
+            android:drawablePadding="5dp"
+            android:hint="账号"
+            android:inputType="textEmailAddress" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/transparent_50" />
+
+        <EditText
+            android:id="@+id/register_password"
             style="@style/login_edittext_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:drawableLeft="@drawable/login_pwd"
             android:hint="密码"
-            android:inputType="textPassword"
-            android:text="123456" />
+            android:inputType="textPassword" />
 
     </LinearLayout>
 
     <com.study.online.view.button.ActionProcessButton
-        android:id="@+id/btnSignIn"
+        android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="30dp"
-        android:text="登录"
+        android:text="注册"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         custom:pb_colorComplete="@color/green_complete"
         custom:pb_colorNormal="@color/blue_normal"
         custom:pb_colorPressed="@color/blue_pressed"
         custom:pb_colorProgress="@color/purple_progress"
-        custom:pb_textComplete="登录成功"
-        custom:pb_textProgress="登录中..." />
+        custom:pb_textComplete="注册成功"
+        custom:pb_textProgress="注册中..." />
 
 </LinearLayout>
