--- a/app/src/main/res/layout/fragment_layout_course.xml
+++ b/app/src/main/res/layout/fragment_layout_course.xml
@@ -4,15 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--   <TextView
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:gravity="center"
-           android:text="Course" />-->
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/course_recyclerview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/course_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/course_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
