--- a/app/src/main/res/layout/fragment_layout_resource.xml
+++ b/app/src/main/res/layout/fragment_layout_resource.xml
@@ -4,11 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <ListView
-        android:id="@+id/source_listView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/resource_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/source_listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 </LinearLayout>
