--- a/app/src/main/res/layout/fragment_layout_study.xml
+++ b/app/src/main/res/layout/fragment_layout_study.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,12 +12,13 @@
         android:background="@color/white"
         app:tabIndicatorColor="@color/base_toolbar_bccolor"
         app:tabSelectedTextColor="@color/colorPrimaryDark"
-        app:tabTextColor="@color/transparent_80"/>
+        app:tabTextColor="@color/transparent_80" />
 
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp" />
 
 </LinearLayout>
