--- a/app/src/main/res/layout/fragment_layout_resource.xml
+++ b/app/src/main/res/layout/fragment_layout_resource.xml
@@ -6,13 +6,19 @@
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/resource_refresh"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ListView
             android:id="@+id/source_listView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:divider="#00000000"
+            android:dividerHeight="5dp"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
