--- a/app/src/main/res/layout/fragment_layout_resource_item.xml
+++ b/app/src/main/res/layout/fragment_layout_resource_item.xml
@@ -54,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:minHeight="100dp"
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@id/source_image"
                 android:text="11111111111111111111111111111111111111111111111111111111111"
