--- a/app/src/main/res/layout/fragment_layout_resource_item.xml
+++ b/app/src/main/res/layout/fragment_layout_resource_item.xml
@@ -34,11 +34,17 @@
                 android:textColor="@color/red" />
 
         </RelativeLayout>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/transparent_20"
+            android:visibility="visible" />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginRight="10dp">
 
             <ImageView
