--- a/app/src/main/res/layout/fragment_layout_course.xml
+++ b/app/src/main/res/layout/fragment_layout_course.xml
@@ -7,13 +7,20 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/course_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/course_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
+            android:layout_height="match_parent"
+            />
     </android.support.v4.widget.SwipeRefreshLayout>
-
+    <TextView
+        android:id="@+id/load"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="加载中..."/>
 </LinearLayout>
