--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,4 +65,41 @@
         <item name="android:windowBackground">@color/transparent</item>
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+    <!--个人信息编辑界面使用-->
+    <style name="UserinfoTextTheme">
+        <item name="android:textColor">#444444</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_alignParentLeft">true</item>
+    </style>
+    <style name="EditUserinfoTextTheme">
+        <item name="android:textColor">#555555</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:gravity">right|center_vertical</item>
+    </style>
+    <style name="Add20HuabiTheme">
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:textColor">#22bfe8</item>
+    </style>
+    <!--记录基本的editText显示-->
+    <style name="base_editText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">#787878</item>
+        <item name="android:background">@null</item>
+    </style>
+    <style name="base_border_editText" parent="base_editText">
+        <item name="android:textColorHint">#a0a0a0</item>
+        <item name="android:background">@drawable/common_layout_normal_with_corner</item>
+        <item name="android:padding">3dp</item>
+    </style>
 </resources>
