--- a/app/src/main/res/layout/fragment_layout_course.xml
+++ b/app/src/main/res/layout/fragment_layout_course.xml
@@ -13,14 +13,15 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/course_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
+
     </android.support.v4.widget.SwipeRefreshLayout>
+
     <TextView
         android:id="@+id/load"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="5dp"
-        android:text="加载中..."/>
+        android:text="加载中..." />
 </LinearLayout>
