--- a/app/src/main/res/layout/fragment_layout_resource.xml
+++ b/app/src/main/res/layout/fragment_layout_resource.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/resource_refresh"
-        android:layout_margin="5dp"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/resource_tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:tabIndicatorColor="@color/base_toolbar_bccolor"
+        app:tabSelectedTextColor="@color/colorPrimaryDark"
+        app:tabTextColor="@color/transparent_80" />
 
-        <ListView
-            android:id="@+id/source_listView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:divider="#00000000"
-            android:dividerHeight="5dp"/>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
-
+    <android.support.v4.view.ViewPager
+        android:id="@+id/resource_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp" />
 
 </LinearLayout>
