--- a/app/src/main/res/layout/activity_layout_course_detail.xml
+++ b/app/src/main/res/layout/activity_layout_course_detail.xml
@@ -16,6 +16,17 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.study.online.view.VideoView
+                    android:id="@+id/videoView"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_gravity="center" />
+            </LinearLayout>
+
             <ImageView
                 android:id="@+id/image_course"
                 android:layout_width="wrap_content"
